Added Pyrebase and firebase database and limited number of notices

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@
 .pub-cache/
 .pub/
 /build/
+config.py
+__pycache__
+data.py
+notices.json
+ggsipu-notice-firebase-adminsdk-4c8gx-3fb2a73c7b.json
 
 # Web related
 lib/generated_plugin_registrant.dart
