--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/home/abhay/Android/Sdk
 flutter.sdk=/home/abhay/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
