--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_neumorphic: ^1.0.7
   firebase_database: 3.1.5
   url_launcher: ^5.4.5
+  firebase_messaging: ^6.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
