--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\Asus\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
-flutter.buildMode=debug
-flutter.versionName=1.0.0
+flutter.buildMode=release
+flutter.versionName=1.0.1
 flutter.versionCode=1
