app working, realtime db fetch not working

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\Asus\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+flutter.sdk=C:\\flutter_dev
 flutter.buildMode=release
 flutter.versionName=1.0.1
 flutter.versionCode=1
