--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,10 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\flutter
+FLUTTER_ROOT=C:\flutter_dev
 FLUTTER_APPLICATION_PATH=C:\Users\Asus\Desktop\Ubuntu\ggsipu_notice
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
 OTHER_LDFLAGS=$(inherited) -framework Flutter
-FLUTTER_FRAMEWORK_DIR=C:\flutter\bin\cache\artifacts\engine\ios
+FLUTTER_FRAMEWORK_DIR=C:\flutter_dev\bin\cache\artifacts\engine\ios
 FLUTTER_BUILD_NAME=1.0.1
 FLUTTER_BUILD_NUMBER=1
+DART_OBFUSCATION=false
+TRACK_WIDGET_CREATION=false
+TREE_SHAKE_ICONS=false
+PACKAGE_CONFIG=.packages
