--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,8 @@ dependencies:
   firebase_database: 3.1.5
   url_launcher: ^5.4.5
   firebase_messaging: ^6.0.13
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  fluttertoast: ^7.1.1
+  cupertino_icons: ^1.0.0
   # firebase_admob: ^0.9.3+4
 
 dev_dependencies:
