--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -6,5 +6,9 @@ FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
 OTHER_LDFLAGS=$(inherited) -framework Flutter
 FLUTTER_FRAMEWORK_DIR=C:\flutter\bin\cache\artifacts\engine\ios
-FLUTTER_BUILD_NAME=1.0.1
-FLUTTER_BUILD_NUMBER=1
+FLUTTER_BUILD_NAME=1.0.4
+FLUTTER_BUILD_NUMBER=6
+DART_OBFUSCATION=false
+TRACK_WIDGET_CREATION=false
+TREE_SHAKE_ICONS=false
+PACKAGE_CONFIG=.packages
