--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   url_launcher: ^5.4.5
   firebase_messaging: ^6.0.13
   cupertino_icons: ^1.0.0
-  share: ^0.6.5+2
+  share: 0.6.5+4
+  shared_preferences: ^0.5.12+4
   flutter_downloader: ^1.5.1
   path_provider: ^1.6.18
   permission_handler: ^5.0.1+1
