--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\Asus\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\maury\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
 flutter.buildMode=release
 flutter.versionName=1.0.6
