update key property

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=android
 keyPassword=android
 keyAlias=key
-storeFile=C:/Desktop/Ubuntu/ggsipu_notice/key.jks
+storeFile=D:/Desktop/Ubuntu/ggsipu_notice/key.jks
