--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  firebase_database: 3.1.5
-  flutter_downloader: ^1.5.1
+  cupertino_icons: ^1.0.2
+  firebase_core: ^1.0.3
+  flutter_downloader: ^1.6.0
   flutter_neumorphic: ^1.0.7
+  http: ^0.13.1
   onesignal_flutter: ^2.6.3
-  path_provider: ^1.6.18
-  permission_handler: ^5.0.1+1
-  share: 0.6.5+4
-  shared_preferences: ^0.5.12+4
-  url_launcher: ^5.4.5
+  path_provider: ^2.0.1
+  permission_handler: ^6.1.3
+  share: ^2.0.1
+  shared_preferences: ^2.0.5
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
