--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,10 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path_android: assets/icon/ic_launcher_xxxhdpi.png
-  image_path_ios: assets/icon/ios.png
-  adaptive_icon_background: assets/icon/ic_background.png
-  adaptive_icon_foreground: assets/icon/ic_foreground.png
+  image_path_android: icon/ic_launcher_xxxhdpi.png
+  image_path_ios: icon/ios.png
+  adaptive_icon_background: icon/ic_background.png
+  adaptive_icon_foreground: icon/ic_foreground.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
