--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\maury\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
-flutter.buildMode=release
-flutter.versionName=1.1.0
-flutter.versionCode=12
+flutter.buildMode=debug
+flutter.versionName=1.1.1
+flutter.versionCode=13
