--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,12 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\flutter
 FLUTTER_APPLICATION_PATH=D:\Desktop\Ubuntu\ggsipu_notice
+COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build\ios
-FLUTTER_BUILD_NAME=1.0.6
-FLUTTER_BUILD_NUMBER=9
+FLUTTER_BUILD_NAME=1.1.1
+FLUTTER_BUILD_NUMBER=13
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
