--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   build_runner: ^2.1.4
   flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^1.3.1
   flutter_test:
     sdk: flutter
   json_serializable: ^6.0.0
@@ -61,6 +62,18 @@ flutter_icons:
   image_path_ios: icon/ios.png
   adaptive_icon_background: icon/ic_background.png
   adaptive_icon_foreground: icon/ic_foreground.png
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  color_dark: "#000000"
+  image: icon/ic_launcher_xxxhdpi.png
+  image_dark: icon/ic_launcher_xxxhdpi.png
+  android: true
+  ios: false
+  web: false
+  android_gravity: center
+  ios_content_mode: center
+  android12: false
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
