--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.0.1
   share_plus: ^3.0.4
   shared_preferences: ^2.0.8
+  timeago: ^3.1.0
   url_launcher: ^6.0.12
 
 dev_dependencies:
