--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+13
+version: 1.2.0-beta+14
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_displaymode: ^0.3.2
   flutter_downloader: ^1.7.1
+  flutter_slidable: ^0.6.0
   get_it: ^7.2.0
   intl: ^0.17.0
   json_annotation: ^4.3.0
