--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\maury\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\maury\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\flutter
 flutter.buildMode=debug
-flutter.versionName=1.1.1
-flutter.versionCode=13
+flutter.versionName=1.2.0-beta
+flutter.versionCode=14
