--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  algolia: ^1.0.4
   cloud_firestore: ^2.5.4
   cupertino_icons: ^1.0.2
   firebase_core: ^1.8.0
